# adk_mvp

./: CLAUDE.md  README.md  pyproject.toml
adk_mvp/: __init__.py  agent.py  prompt.py
adk_mvp/sub_agents/: __init__.py
adk_mvp/sub_agents/financial_agent/: __init__.py  agent.py  prompt.py
adk_mvp/sub_agents/search_agent/: __init__.py  agent.py  prompt.py
tests/: test_agent.py
