[project]
name = "adk_mvp"
version = "0.1.0"
description = "ADK MVP with Google Search tool"
authors = [
    {name = "lujames13",email = "lujames13@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "google-adk (>=1.10.0,<2.0.0)",
    "google-cloud-aiplatform (>=1.108.0,<2.0.0)",
    "google-genai (>=1.29.0,<2.0.0)",
    "pydantic (>=2.11.7,<3.0.0)",
    "python-dotenv (>=1.1.1,<2.0.0)"
]

[tool.poetry]

[tool.poetry.group.dev.dependencies]
pytest = "^8.4.1"
pytest-asyncio = "^1.1.0"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
